test/typeerrors/ex15.golden
Building file ../test/typeerrors/ex15.act
  Compiling ex15.act for release

ERROR: Error when compiling ex15 module: Type error
Cannot satisfy the following simultaneous constraints for the unknown types t0, t1:

  |
3 |    raise y
  |          ^
The type of y (which we call t0) must be a subclass of __builtin__.Exception

  |
2 |    y = 1
  |        ^
The type of 1 (which we call t1) must implement __builtin__.Number

  |
2 |    y = 1
  |        ^
The type of 1 (which we call t1) must be a subtype of t0

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

